--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   http:
+  flutter_svg:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,12 +38,21 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   fonts:
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Regular.ttf
     - family: Exo 2
       fonts:
         - asset: fonts/Exo2-Medium.ttf
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - images/mojito.svg
+    - images/beer.svg
+    - images/cocktail.svg
+    - images/mojito_gray.svg
+    - images/beer_gray.svg
+    - images/cocktail_gray.svg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
