--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - test/resources/responses.json
     - images/mojito.svg
     - images/mojito.png
     - images/beer.svg
