--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,10 @@
-os:
-  - linux
-sudo: false
+language: dart
+dist: xenial
 addons:
   apt:
-    # Flutter depends on /usr/lib/x86_64-linux-gnu/libstdc++.so.6 version GLIBCXX_3.4.18
-    sources:
-      - ubuntu-toolchain-r-test # if we don't specify this, the libstdc++6 we get is the wrong version
     packages:
-      - libstdc++6
-      - fonts-noto
-before_script:
+      - lib32stdc++6
+install:
   - git clone https://github.com/flutter/flutter.git -b beta
   - ./flutter/bin/flutter doctor
   - gem install coveralls-lcov
@@ -19,4 +14,4 @@ after_success:
   - coveralls-lcov coverage/lcov.info
 cache:
   directories:
-  - $HOME/.pub-cache
+    - $HOME/.pub-cache
