--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/mojito.svg
-    - images/beer.svg
-    - images/cocktail.svg
-    - images/mojito_gray.svg
-    - images/beer_gray.svg
-    - images/cocktail_gray.svg
+    - assets/categories/mojito.svg
+    - assets/categories/beer.svg
+    - assets/categories/cocktail.svg
+    - assets/categories/mojito_gray.svg
+    - assets/categories/beer_gray.svg
+    - assets/categories/cocktail_gray.svg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
