--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
     sdk: flutter
   http:
   flutter_svg:
-  rxdart: ^0.22.0
+  equatable: ^1.1.0
+  flutter_bloc: ^3.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -27,6 +28,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito:
+  test: ^1.3.0
+  bloc_test: ^3.0.0
 
 
 # For information on the generic Dart part of this file, see the
