--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,7 @@ flutter:
     - assets/categories/mojito_gray.svg
     - assets/categories/beer_gray.svg
     - assets/categories/cocktail_gray.svg
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+    - lib/config.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
