Update call to action

--- a/lib/config.json
+++ b/lib/config.json
@@ -27,7 +27,7 @@
   },
   "defaultStatement": {
     "ID": null,
-    "statement": "Tap to start playing",
+    "statement": "Tap to start",
     "category": "internal"
   },
   "errorStatement": {
