--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   http:
-  flutter_svg:
+  flutter_svg: 0.19.0
   equatable: ^1.1.0
   flutter_bloc: ^3.2.0
 
