--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: never_have_i_ever
+name: nhie
 description: A new Flutter application.
 
 # The following defines the version and build number for your application.
@@ -31,7 +31,6 @@ dev_dependencies:
   mockito:
   test: ^1.3.0
   bloc_test: 7.0.4
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
