--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   equatable: ^1.1.0
   flutter_bloc: 6.0.5
   uuid: 2.2.2
+  flutter_launcher_icons: "^0.8.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -31,6 +32,13 @@ dev_dependencies:
   mockito:
   test: ^1.3.0
   bloc_test: 7.0.4
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/beer.png"
+  adaptive_icon_background: "#EDA010"
+  adaptive_icon_foreground: "assets/icon/beer.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
