--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_bloc: 6.0.5
   uuid: 2.2.2
   flutter_launcher_icons: "^0.8.0"
+  easy_localization: 2.3.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,6 +61,7 @@ flutter:
     - assets/categories/beer_gray.svg
     - assets/categories/cocktail_gray.svg
     - lib/config.json
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
